; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_authgss_prot.c_xdr_rpc_gss_data.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_authgss_prot.c_xdr_rpc_gss_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdr_rpc_gss_data(%struct.TYPE_5__* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  switch i32 %18, label %39 [
    i32 129, label %19
    i32 130, label %28
    i32 128, label %37
  ]

19:                                               ; preds = %7
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %15, align 4
  %27 = call i32 @xdr_rpc_gss_wrap_data(%struct.TYPE_5__* %20, i32 %21, i32 %22, i32 %23, i32 %24, i32 %25, i32 %26)
  store i32 %27, i32* %8, align 4
  br label %41

28:                                               ; preds = %7
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %13, align 4
  %34 = load i32, i32* %14, align 4
  %35 = load i32, i32* %15, align 4
  %36 = call i32 @xdr_rpc_gss_unwrap_data(%struct.TYPE_5__* %29, i32 %30, i32 %31, i32 %32, i32 %33, i32 %34, i32 %35)
  store i32 %36, i32* %8, align 4
  br label %41

37:                                               ; preds = %7
  %38 = load i32, i32* @TRUE, align 4
  store i32 %38, i32* %8, align 4
  br label %41

39:                                               ; preds = %7
  %40 = load i32, i32* @FALSE, align 4
  store i32 %40, i32* %8, align 4
  br label %41

41:                                               ; preds = %39, %37, %28, %19
  %42 = load i32, i32* %8, align 4
  ret i32 %42
}

declare dso_local i32 @xdr_rpc_gss_wrap_data(%struct.TYPE_5__*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @xdr_rpc_gss_unwrap_data(%struct.TYPE_5__*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
